--- a/site/_includes/getting-started-sidebar/master/sidebar.html
+++ b/site/_includes/getting-started-sidebar/master/sidebar.html
@@ -55,6 +55,8 @@
     </a>
     <ul class="collapse sidebar-nav sidebar-submenu" id="release-notes-menu">
 
+       <li><a href="https://blog.bazel.build/2021/08/18/bazel-4.2.html">Bazel 4.2</a></li>
+       <li><a href="https://blog.bazel.build/2021/05/21/bazel-4-1.html">Bazel 4.1</a></li>
        <li><a href="https://blog.bazel.build/2020/11/10/bazel-4.0-announce.html">Bazel 4.0</a></li>
        <li><a href="https://blog.bazel.build/2020/10/20/bazel-3-7.html">Bazel 3.7</a></li>
        <li><a href="https://blog.bazel.build/2020/10/06/bazel-3-6.html">Bazel 3.6</a></li>
