--- a/src/test/shell/testenv.sh.tmpl
+++ b/src/test/shell/testenv.sh.tmpl
@@ -289,6 +289,7 @@ EOF
         "openjdk11_darwin_aarch64_archive"
         "openjdk11_linux_archive"
         "openjdk11_windows_archive"
+        "openjdk11_windows_arm64_archive"
         "openjdk15_darwin_archive"
         "openjdk15_darwin_aarch64_archive"
         "openjdk15_linux_archive"
@@ -301,6 +302,7 @@ EOF
         "openjdk17_darwin_aarch64_archive"
         "openjdk17_linux_archive"
         "openjdk17_windows_archive"
+        "openjdk17_windows_arm64_archive"
         "openjdk_linux_aarch64_minimal"
         "openjdk_linux_minimal"
         "openjdk_macos_x86_64_minimal"
@@ -334,6 +336,7 @@ EOF
         "remotejdk17_macos_for_testing"
         "remotejdk17_macos_aarch64_for_testing"
         "remotejdk17_win_for_testing"
+        "remotejdk17_win_arm64_for_testing"
         "rules_cc"
         "rules_java"
         "rules_proto"
