Cherry pick win arm64 (#14794)
* Enable native support for Windows on arm64 (Part 1)

Contains following changes to third_party:

 - Extended def_parser to handle ARM64 binaries
 - Add grpc patch to workaround build issues

Closes: https://github.com/bazelbuild/bazel/pull/14689

Partial commit for third_party/*, see #14689.

Signed-off-by: Yun Peng <pcloudy@google.com>

* Enable native support for Windows on arm64

This PR will enable cross-compilation of Bazel binaries for win/arm64 from win/x64

`bazel build -c opt --cpu=x64_arm64_windows //src:bazel.exe`

Generated bazel executable can be used for native compilation in win/arm64

`bazel.exe build //main:hello-world`

Following changes are included

- Add win/arm64 JDK 17
- Fix AutoCpuConverter.java to identify win/arm64 CPU
- Extend build_bazel_binaries.yml to cross-compile for win/arm64
- Fix msvc toolchain to look for tools in HostX86 directory as well
- add clang-cl support for windows/arm64 host
- Extend host_windows config to handle windows x64 and arm64 hosts.

Closes #14340.

PiperOrigin-RevId: 425919351

* [windows/arm64] Add missing JDK toolchain for java build

Extend configurations to add JDK 11 and 17 for windows/arm64 platforms.

This should fix the Java builds on windows/arm64

Closes #14700.

PiperOrigin-RevId: 427737536

* add missing openjdk11_windows_arm64_archive

* Deduplicate urls parsed to reduce crawl requests

https://github.com/bazelbuild/bazel/pull/14700 added couple more URLs to fetch JDK package and seems to be causing some infrastructure as discussed in https://github.com/bazelbuild/bazel/pull/14700.

This patch workaround the issue by removing the duplicated URLs and reduce the crawl request.

Closes #14763.

PiperOrigin-RevId: 427464876

* fix jdk_http_archives.tmpl

--- a/src/test/shell/bazel/testdata/jdk_http_archives.tmpl
+++ b/src/test/shell/bazel/testdata/jdk_http_archives.tmpl
@@ -166,6 +166,17 @@ exports_files(["WORKSPACE"], visibility = ["//visibility:public"])
     ],
 )
 
+# This must be kept in sync with the top-level WORKSPACE file.
+http_archive(
+    name = "openjdk11_windows_arm64_archive",
+    build_file_content = "java_runtime(name = 'runtime', srcs =  glob(['**']), visibility = ['//visibility:public'])",
+    sha256 = "b8a28e6e767d90acf793ea6f5bed0bb595ba0ba5ebdf8b99f395266161e53ec2",
+    strip_prefix = "jdk-11.0.13+8",
+    urls = [
+        "https://mirror.bazel.build/aka.ms/download-jdk/microsoft-jdk-11.0.13.8.1-windows-aarch64.zip",
+    ],
+)
+
 #################################### JDK 17 ####################################
 # This must be kept in sync with the top-level WORKSPACE file.
 http_archive(
@@ -224,5 +235,17 @@ exports_files(["WORKSPACE"], visibility = ["//visibility:public"])
     urls = [
         "https://mirror.bazel.build/cdn.azul.com/zulu/bin/zulu17.28.13-ca-jdk17.0.0-win_x64.zip",
         "https://cdn.azul.com/zulu/bin/zulu17.28.13-ca-jdk17.0.0-win_x64.zip",
+    ],
+)
+
+# This must be kept in sync with src/test/shell/bazel/testdata/jdk_http_archives.
+http_archive(
+    name = "openjdk17_windows_arm64_archive",
+    build_file_content = "java_runtime(name = 'runtime', srcs =  glob(['**']), visibility = ['//visibility:public'])",
+    sha256 = "811d7e7591bac4f081dfb00ba6bd15b6fc5969e1f89f0f327ef75147027c3877",
+    strip_prefix = "zulu17.30.15-ca-jdk17.0.1-win_aarch64",
+    urls = [
+        "https://mirror.bazel.build/cdn.azul.com/zulu/bin/zulu17.30.15-ca-jdk17.0.1-win_aarch64.zip",
+        "https://cdn.azul.com/zulu/bin/zulu17.30.15-ca-jdk17.0.1-win_aarch64.zip"
     ],
 )
