Initial Java 18 toolchain support
Windows arm64 builds don't seem to be available yet, otherwise this
supports the same platforms as JDK 17.

https://github.com/bazelbuild/bazel/issues/14532

--- a/src/test/shell/testenv.sh.tmpl
+++ b/src/test/shell/testenv.sh.tmpl
@@ -322,6 +322,10 @@ EOF
         "remotejdk17_macos_aarch64_for_testing"
         "remotejdk17_win_for_testing"
         "remotejdk17_win_arm64_for_testing"
+        "remotejdk18_linux_for_testing"
+        "remotejdk18_macos_for_testing"
+        "remotejdk18_macos_aarch64_for_testing"
+        "remotejdk18_win_for_testing"
         "rules_cc"
         "rules_java"
         "rules_proto"
