Add windows aarch64

--- a/src/test/shell/testenv.sh.tmpl
+++ b/src/test/shell/testenv.sh.tmpl
@@ -326,6 +326,7 @@ EOF
         "remotejdk18_macos_for_testing"
         "remotejdk18_macos_aarch64_for_testing"
         "remotejdk18_win_for_testing"
+        "remotejdk18_win_arm64_for_testing"
         "rules_cc"
         "rules_java"
         "rules_proto"
