--- a/src/test/shell/testenv.sh.tmpl
+++ b/src/test/shell/testenv.sh.tmpl
@@ -295,6 +295,11 @@ EOF
         "openjdk17_linux_archive"
         "openjdk17_windows_archive"
         "openjdk17_windows_arm64_archive"
+        "openjdk18_darwin_archive"
+        "openjdk18_darwin_aarch64_archive"
+        "openjdk18_linux_archive"
+        "openjdk18_windows_archive"
+        "openjdk18_windows_arm64_archive"
         "openjdk_linux_aarch64_minimal"
         "openjdk_linux_minimal"
         "openjdk_macos_x86_64_minimal"
